docs: update namespace to /mem8: and simplify installation flow
Standardize plugin command namespace from /m8- to /mem8: throughout
all documentation. Simplify installation to clear two-step process:
1. Install CLI with uv tool install mem8
2. Install plugin with /plugin install mem8@mem8-official

- Update all command references to use /mem8: namespace
- Remove template/cookiecutter documentation
- Rename "Thoughts" to "Memory" in concepts
- Add slug generation to research metadata
- Streamline homepage to show two-step install

--- a/documentation/docs/workflows/visualizer.mdx
+++ b/documentation/docs/workflows/visualizer.mdx
@@ -19,9 +19,9 @@ Explore the mem8 command ecosystem through interactive visualizations. Understan
 ### 📊 Pyramid View
 Shows commands arranged by complexity level. Higher commands are more complex and use more parallel agents.
 
-- **Top tier (9)**: m8-research - Full research orchestration with 5+ parallel agents
-- **High tier (7-8)**: m8-debug, m8-validate - Multi-agent investigation and verification
-- **Mid tier (5-6)**: m8-implement, m8-describe-pr - Implementation and integration
+- **Top tier (9)**: mem8:research - Full research orchestration with 5+ parallel agents
+- **High tier (7-8)**: mem8:debug, mem8:validate - Multi-agent investigation and verification
+- **Mid tier (5-6)**: mem8:implement, mem8:describe-pr - Implementation and integration
 - **Low tier (3-4)**: Utility commands for setup and workflow support
 
 ### 🔄 Workflows
@@ -42,20 +42,20 @@ Visualizes the relationship between complexity and autonomy. Commands in the upp
 
 ### Synthesis & Orchestration (7-9)
 These commands spawn multiple parallel agents to gather, analyze, and synthesize information:
-- **m8-research**: 5+ specialized agents (codebase-locator, analyzer, pattern-finder, memory-locator, analyzer, web-search)
-- **m8-validate**: 3+ verification agents (DB, code, test verifiers)
-- **m8-debug**: 3 investigation agents (log analyzer, DB inspector, git inspector)
+- **mem8:research**: 5+ specialized agents (codebase-locator, analyzer, pattern-finder, memory-locator, analyzer, web-search)
+- **mem8:validate**: 3+ verification agents (DB, code, test verifiers)
+- **mem8:debug**: 3 investigation agents (log analyzer, DB inspector, git inspector)
 
 ### Integration & Orchestration (5-6)
 Single-purpose orchestration with some parallelization:
-- **m8-implement**: Executes implementation plans with context
-- **m8-describe-pr**: Multi-system integration for PR documentation
+- **mem8:implement**: Executes implementation plans with context
+- **mem8:describe-pr**: Multi-system integration for PR documentation
 
 ### Automation & Utility (3-4)
 Workflow automation and support:
-- **m8-plan**: Creates implementation plans
-- **m8-commit**: Analyzes and creates commits
-- **m8-local-review**: Sets up worktrees for code review
+- **mem8:plan**: Creates implementation plans
+- **mem8:commit**: Analyzes and creates commits
+- **mem8:local-review**: Sets up worktrees for code review
 
 ## Key Insights
 
